
	* fix issue where setting file/piece priority would stop checking
	* expose post_dht_stats() to python binding
	* fix backwards compatibility to downloads without partfiles
	* improve part-file related error messages
	* fix reporting &redundant= in tracker announces
	* fix tie-break in duplicate peer connection disconnect logic
	* fix issue with SSL tracker connections left in CLOSE_WAIT state
	* defer truncating existing files until the first time we write to them
	* fix issue when receiving a torrent with 0-sized padfiles as magnet link
	* fix issue resuming 1.0.x downloads with a file priority 0
	* fix torrent_status::next_announce
	* fix pad-file scalability issue
	* made coalesce_reads/coalesce_writes settings take effect on linux and windows
	* use unique peer_ids per connection
	* fix iOS build on recent SDK
	* fix tracker connection bind issue for IPv6 trackers
	* fix error handling of some merkle torrents
	* fix error handling of unsupported hard-links

1.1.6 release

	* deprecate save_encryption_settings (they are part of the normal settings)
	* add getters for peer_class_filter and peer_class_type_filter
	* make torrent_handler::set_priority() to use peer_classes
	* fix support for boost-1.66 (requires C++11)
	* fix i2p support
	* fix loading resume data when in seed mode
	* fix part-file creation race condition
	* fix issue with initializing settings on session construction
	* fix issue with receiving interested before metadata
	* fix IPv6 tracker announce issue
	* restore path sanitization behavior of ":"
	* fix listen socket issue when disabling "force_proxy" mode
	* fix full allocation failure on APFS

1.1.5 release

	* fix infinite loop when parsing certain invalid magnet links
	* fix parsing of torrents with certain invalid filenames
	* fix leak of torrent_peer objecs (entries in peer_list)
	* fix leak of peer_class objects (when setting per-torrent rate limits)
	* expose peer_class API to python binding